@@ -33,6 +33,7 @@ Changes in current version:
  o change evrpc hooking to allow pausing of RPCs; this will make it possible for the hook to do some meaning ful work; this is not backwards compatible.
  o allow an http request callback to take ownership of a request structure
  o allow association of meta data with RPC requests for hook processing
+ o associate more context for hooks to query such as the connection object
 	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
